# SuperSuit

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  README.md  dev_notes.md  pettingzoo_api_test.py  pyproject.toml  real_pettingzoo_env_test.py  requirements.txt  setup.py  test_results.txt
.cache/v/cache/: lastfailed
.github/workflows/: build-publish.yml  linux-test.yml  pre-commit.yml  python-package.yml  tests.yml
sanity_checks/: agent_indication_tests.py  base_aec_tests.py  black_death_tests.py  minimal_working_env.py  padding_tests.py
supersuit/: __init__.py  aec_wrappers.py  agent_indicator.py  base_aec_wrapper.py  basic_wrappers.py  frame_stack.py  gym_wrappers.py  more_wrappers.py  orig_wrapper.py  parallel_wrappers.py  vector_constructors.py
supersuit/NaN/: NaN_wrappers.py
supersuit/action_transforms/: continuous_action_ops.py  continuous_actions.py  dehomogenize_ops.py  homogenize_ops.py  scale_actions_wrapper.py
supersuit/adv_transforms/: accumulator.py  agent_indicator.py  frame_skip.py  frame_stack.py  obs_delay.py
supersuit/aec_vector/: __init__.py  async_vector_env.py  base_aec_vec_env.py  create.py  vector_env.py
supersuit/basic_transforms/: __init__.py  color_reduction.py  down_scale.py  dtype.py  flatten.py  normalize_obs.py  reshape.py  resize.py
supersuit/generic_wrappers/: __init__.py  basic_wrappers.py  delay_observations.py  frame_skip.py  frame_stack.py  max_observation.py  nan_wrappers.py  no_op_reset.py  sticky_actions.py
supersuit/generic_wrappers/frame_skip/: __init__.py  frame_skip_aec.py  frame_skip_gym.py
supersuit/generic_wrappers/lambda_wrappers/: __init__.py  reward_lambda.py
supersuit/generic_wrappers/modifier_wrappers/: delay_observations.py  sticky_actions.py
supersuit/generic_wrappers/utils/: base_modifier.py  shared_wrapper_util.py
supersuit/lambda_wrappers/: __init__.py  action_lambda.py  observation_lambda.py  reward_lambda.py
supersuit/multiagent_wrappers/: __init__.py  agent_indication.py  black_death.py  padding_wrappers.py
supersuit/utils/: accumulator.py  agent_indicator.py  base_aec_wrapper.py  base_modifier.py  base_parallel_wrapper.py  convert_box.py  deprecated.py  frame_skip.py  frame_stack.py  make_defaultdict.py  obs_delay.py  shared_wrapper_util.py  wrapper_chooser.py
supersuit/utils/action_transforms/: homogenize_ops.py
supersuit/utils/basic_transforms/: __init__.py  color_reduction.py  dtype.py  flatten.py  normalize_obs.py  reshape.py  resize.py
supersuit/vector/: __init__.py  aec_rollout.py  concat_vec_env.py  constructors.py  markov_vector_wrapper.py  multiproc_vec.py  sb3_vector_wrapper.py  sb_vector_wrapper.py  single_vec_env.py  vector_constructors.py
supersuit/vector/utils/: shared_array.py  space_wrapper.py
test/: aec_mock_test.py  aec_unwrapped_test.py  dummy_aec_env.py  dummy_gym_env.py  generated_agents_test.py  gym_mock_test.py  gym_unwrapped_test.py  integration_test.py  mock_test.py  parallel_env_test.py  pettingzoo_api_test.py  pettingzoo_env_test.py  test_autodep.py  test_frame_stack.py  vec_env_test.py
test/NaN/: NaN_test.py  dummy_NaN_env.py
test/test_action_transforms/: dummy_scale_action_env.py  scale_action_test.py  test_continuous_actions.py  test_dehomogenize.py  test_homogenize.py
test/test_adv_transforms/: test_agent_indicator.py  test_frame_stack.py
test/test_basic_transforms/: test_color_reduction.py  test_down_scale.py  test_dtype.py  test_flatten.py  test_normalized_obs.py  test_reshape.py  test_resize.py
test/test_transforms/: test_color_reduction.py  test_down_scale.py  test_dtype.py  test_flatten.py  test_normalized_obs.py  test_reshape.py
test/test_utils/: test_agent_indicator.py  test_frame_stack.py
test/test_utils/test_action_transforms/: test_homogenize.py
test/test_utils/test_basic_transforms/: test_color_reduction.py  test_dtype.py  test_flatten.py  test_normalized_obs.py  test_reshape.py  test_resize.py
test/test_vector/: test_aec_vector_identity_env.py  test_aec_vector_values.py  test_env_is_wrapped.py  test_gym_vector.py  test_pettingzoo_to_vec.py  test_pettingzoo_to_vec_gymnasium_wrappers.py  test_render.py  test_vector_dict.py
